fixes and refactoring code